activity project update